# ns3-industrial-channel-study

./: .gitignore  AGENTS.md  BIBLIOGRAPHY.md  CMakeLists.txt  Makefile  PAPER_IMPROVEMENTS.md  README.md  RESULTS_FOR_PAPER.md  paper.bib
configs/: base.yaml  coherence_time_sweep.yaml  correlation_pilot.yaml  correlation_ready_reduced_campaign.yaml  cross_validation_jammer.yaml  cross_validation_subset.yaml  deadline_sensitivity.yaml  estimator_impairment.yaml  fairness_minirun.yaml  ofdma_full_balanced_campaign.yaml  ofdma_retarget_pdr_probe.yaml  ofdma_ru_diversity_main.yaml  paper_snr_sweep.yaml  payload_latency_yans_diagnostic.yaml  phase_sensitivity.yaml  s9_ablation.yaml  s9_estimator_sensitivity.yaml  smoke_ofdma_validation.yaml
docs/: PAPER_CHATGPT_GUIDE.md  channel_models.md  journal_figures.md  methodology.md  metrics.md  reproducibility.md  validation.md
paper/: .gitignore  README.md  REVIEW_WEAKNESSES.md  build.sh  oj_ies.bib  oj_ies_manuscript.tex  regen_figures.py
scripts/: aggregate_cooldown_sweep.py  aggregate_s9_ablation.py  aggregate_s9_sensitivity.py  analyze_coherence_time.py  analyze_correlations.py  analyze_ru_granularity.py  bootstrap_confidence_intervals.py  check_coherence_outputs.py  check_seed_independence.py  config_utils.py  cooldown_multideadline_broadband.py  finalize_paper_campaign.sh  launch_paper_campaign.sh  make_report.py  merge_paper_shards.py  parse_results.py  plot_coherence_figures.py  plot_correlation_heatmaps.py  plot_pdr_seed_uncertainty.py  plot_results.py  run_coherence_debug.sh  run_coherence_experiment.py  run_sweep.py  (+5 more)
(+44 files in other folders)
